# agentic-quant-studio

./: Cargo.toml  README.md
config/: defaults.toml  example.toml
crates/api-client/: Cargo.toml
crates/api-client/src/: error.rs  lib.rs
crates/api-client/src/exchanges/: api.rs  bybit.rs  mod.rs  utils.rs
crates/backend/: Cargo.toml
crates/backend/src/: catalog.rs  config.rs  main.rs  router.rs  state.rs
crates/backend/src/handlers/: candles.rs  catalog.rs  jobs.rs  mod.rs  studio.rs
crates/backend/src/handlers/candles/: mod.rs
crates/backend/src/jobs/: context.rs  mod.rs  queue.rs  types.rs  worker.rs
crates/backend/src/jobs/processors/: ingest_candles.rs
crates/backend/src/models/: candle.rs  catalog.rs  job.rs  mod.rs  studio.rs
crates/backend/src/services/: candle_service.rs  candle_worker.rs  mod.rs  studio_candles.rs
crates/backend/src/services/jobs/: ingest_candles.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: types.rs
crates/studio/: Cargo.toml  README.md
crates/studio/src/: catalog.rs  error.rs  lib.rs  registry.rs
crates/studio/src/nodes/: mod.rs
crates/studio/src/nodes/datasource/: candles.rs  mod.rs
crates/studio/src/nodes/indicator/: common.rs  ema.rs  mod.rs  rsi.rs  sma.rs
crates/studio/src/nodes/literal/: bool.rs  common.rs  mod.rs  number.rs
crates/studio/src/nodes/logic/: and.rs  common.rs  crossover.rs  crossunder.rs  gt.rs  lt.rs  mod.rs  or.rs
crates/studio/src/nodes/output/: mod.rs  series.rs  signal.rs
crates/studio/src/runtime/: candles.rs  context.rs  display.rs  execute.rs  mod.rs  node.rs  plan.rs  validate.rs  value.rs
crates/studio/src/spec/: graph.rs  mod.rs
crates/warehouse/: Cargo.toml
crates/warehouse/src/: candle_downloader.rs  catalog.rs  error.rs  lib.rs  parquet.rs  query.rs
frontend/: components.json  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/data/: page.tsx
frontend/components/chart/: CandleChart.tsx  CandleChartPanel.tsx  ChartLegend.tsx  IndicatorBrowser.tsx  IndicatorLayerRow.tsx  IndicatorSettingsDialog.tsx  IndicatorToolbar.tsx  NoDatasetsMessage.tsx  OscillatorChartBox.tsx  OscillatorChartsPanel.tsx  SmaToggle.tsx
frontend/components/layout/: DashboardShell.tsx
frontend/components/providers/: QueryProvider.tsx
frontend/hooks/: useCatalog.test.ts  useCatalog.ts  useCatalogSummary.ts  useIndicatorCatalog.ts  useIngestionJobs.ts  useJobs.ts
frontend/hooks/chart/: index.ts  useCandleChart.ts  useChartHistoryScroll.ts  useChartIndicators.ts  useChartResize.ts  useChartStackSync.ts  useOscillatorChart.ts
frontend/lib/: types.ts  utils.ts
frontend/lib/chart/: api.ts  cache.test.ts  cache.ts  createChart.ts  createOscillatorChart.ts  datafeed.test.ts  datafeed.ts  datafeedEvent.test.ts  datafeedEvent.ts  index.ts  mapCandles.test.ts  mapCandles.ts  mapSeries.test.ts  mapSeries.ts  preserveViewport.test.ts  preserveViewport.ts  syncTimeScale.test.ts  syncTimeScale.ts  theme.ts  types.ts
frontend/lib/indicators/: buildDataRange.test.ts  buildDataRange.ts  buildRunRequest.test.ts  buildRunRequest.ts  catalog.ts  colors.test.ts  colors.ts  index.ts  instance.test.ts  instance.ts  labels.test.ts  labels.ts  registry.test.ts  registry.ts  render.test.ts  render.ts  types.ts
frontend/stores/: useChartIndicatorsStore.test.ts  useChartIndicatorsStore.ts  useTradingStore.ts
(+3 files in other folders)
