[package]
name = "api-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
thiserror.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde_json = "1"
rand = "0.8"
