[package]
name = "warehouse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
api-client = { path = "../api-client" }
thiserror.workspace = true
tokio.workspace = true
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
polars = { workspace = true, features = ["dynamic_group_by", "partition_by"] } # "temporal"
polars-buffer = "0.53"
polars-utils = "0.53"

[dev-dependencies]
tempfile = "3"
